# cirmax-rs

./: .eslintrc.json  package.json
src/: index.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/2022-09-06-145926_create_login/: up.sql
src-tauri/migrations/2022-09-26-150023_empresa/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs
src/assets/: Spinner.tsx
src/config/: Config.tsx  Empresa.tsx
src/home/: Home.tsx
src/login/: Login.tsx
src/models/: empresa.class.ts
src/router/: Routes.tsx
